welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: type mismatch;
 found   : Double
 required: Float
		return Math.round(inf(a,b));
                                     ^